--- a/src/app/transaction-form/transaction-form.component.html
+++ b/src/app/transaction-form/transaction-form.component.html
@@ -1,3 +1,22 @@
-<p>
-  transaction-form works!
-</p>
+<div class="container">
+  <h1>Transaction Form</h1>
+  <form (ngSubmit)="onSubmit()" #transactionForm="ngForm">
+    <div class="form-group">
+      <label for="Sender">Sender</label>
+      <input type="text" class="form-control" id="Sender" required [(ngModel)]="model.Sender" name="Sender">
+    </div>
+
+
+    <div class="form-group">
+      <label for="Recipient">Recipient</label>
+      <input type="text" class="form-control" id="Recipient" required [(ngModel)]="model.Recipient" name="Recipient">
+    </div>
+
+    <div class="form-group">
+      <label for="Amount">Amount</label>
+      <input type="number" class="form-control" id="Amount" required [(ngModel)]="model.Amount" name="Amount">
+    </div>
+    <button type="submit" class="btn btn-success"[disabled]="!transactionForm.form.valid">Submit</button>
+
+  </form>
+</div>
