--- a/src/app/transaction-form/transaction-form.component.html
+++ b/src/app/transaction-form/transaction-form.component.html
@@ -3,18 +3,18 @@
   <form (ngSubmit)="onSubmit()" #transactionForm="ngForm">
     <div class="form-group">
       <label for="Sender">Sender</label>
-      <input type="text" class="form-control" id="Sender" required [(ngModel)]="model.Sender" name="Sender">
+      <input type="text" class="form-control" id="Sender" required [(ngModel)]="model.sender" name="Sender">
     </div>
 
 
     <div class="form-group">
       <label for="Recipient">Recipient</label>
-      <input type="text" class="form-control" id="Recipient" required [(ngModel)]="model.Recipient" name="Recipient">
+      <input type="text" class="form-control" id="Recipient" required [(ngModel)]="model.recipient" name="Recipient">
     </div>
 
     <div class="form-group">
       <label for="Amount">Amount</label>
-      <input type="number" class="form-control" id="Amount" required [(ngModel)]="model.Amount" name="Amount">
+      <input type="number" class="form-control" id="Amount" required [(ngModel)]="model.amount" name="Amount">
     </div>
     <button type="submit" class="btn btn-success"[disabled]="!transactionForm.form.valid">Submit</button>
 
