--- a/src/app/transaction-form/transaction-form.component.html
+++ b/src/app/transaction-form/transaction-form.component.html
@@ -30,7 +30,7 @@
 
   </form>
 </div>
-<div [hidden]="!submitted">
-  {{ transactionMessage | async}}
+<div [hidden] = "!submitted">
+  {{ transactionMessage.message | async}}
 </div>
 </div>
