Add blockchain explorer navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="app-component">
-  <h1 class="text-center">Nanobit Blockchain Explorer</h1>
+<!--<div class="app-component">
+  <h1 class="text-center">Nanobitcoin Blockchain Explorer</h1>
   <app-table></app-table>
   </div>
+  -->
+  <nav> 
+    <a routerLink="/blockchain">Blockchain Explorer</a>
+    <a routerLink="/transaction">Transaction Form</a>
+  </nav>
+
 <router-outlet></router-outlet>
-<app-transaction-form></app-transaction-form>
+<!--app-transaction-form></app-transaction-form-->
