--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   <nav> 
     <a routerLink="/blockchain">Blockchain Explorer</a>
     <a routerLink="/transaction">Transaction Form</a>
+    <a routerLink="/dashboard">Node Dashboard</a>
   </nav>
 
 <router-outlet></router-outlet>
